--- a/app/src/main/res/layout/activity_continue.xml
+++ b/app/src/main/res/layout/activity_continue.xml
@@ -22,6 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_rec">
+
             </ImageView>
 
         </LinearLayout>
@@ -55,6 +56,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/login_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
@@ -70,6 +72,7 @@
                 android:layout_height="0dp"/>
 
             <Button
+                android:id="@+id/signup_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
