--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,19 +69,19 @@
                 android:paddingStart="20dp"
                 android:textSize="18dp" />
 
-<!--            <EditText-->
-<!--                android:id="@+id/register_confirm_pass"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:layout_marginTop="20dp"-->
-<!--                android:background="@drawable/shape"-->
-<!--                android:ems="16"-->
-<!--                android:hint="Confirm password"-->
-<!--                android:padding="10dp"-->
-<!--                android:paddingStart="20dp"-->
-<!--                android:textSize="18dp" />-->
-        </LinearLayout>
+            <EditText
+                        android:id="@+id/register_confirm_pass"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/shape"
+                        android:ems="16"
+                        android:hint="Confirm password"
+                        android:padding="10dp"
+                        android:paddingStart="20dp"
+                        android:textSize="18dp" />
+    </LinearLayout>
 
 
         <LinearLayout
