--- a/app/src/main/res/drawable/roundbutton.xml
+++ b/app/src/main/res/drawable/roundbutton.xml
@@ -3,11 +3,11 @@
     >
     <corners android:radius="6dp"/>
     <solid
-        android:color="@color/white"/>
+        android:color="@color/login_bckgnd"/>
 
     <stroke
-        android:width="1dp"
-        android:color="@color/white"/>
+        android:width="2dp"
+        android:color="@color/black"/>
 
 
 </shape>
