--- a/app/src/main/res/layout/activity_continue.xml
+++ b/app/src/main/res/layout/activity_continue.xml
@@ -17,14 +17,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/img"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_rec">
-            </ImageView>
+                android:layout_height="@dimen/_450sdp"
+                android:layout_marginTop="-50dp"
+                app:cardCornerRadius="50dp"
+                app:cardBackgroundColor="#333333"
+                >
 
-        </LinearLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/logo"
+                    android:layout_gravity="center"
+
+                    />
+
+            </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,7 +50,7 @@
                 android:background="@drawable/roundbutton"
                 android:textAllCaps="false"
                 android:textSize="20dp"
-                android:padding="10dp"
+                android:padding="5dp"
                 android:fontFamily="@font/psb"/>
 
         </LinearLayout>
@@ -62,7 +71,7 @@
                 android:text="Login"
                 android:textAllCaps="false"
                 android:textSize="20dp"
-                android:padding="10dp"
+                android:padding="5dp"
                 android:fontFamily="@font/psb"/>
 
             <Space
@@ -70,14 +79,16 @@
                 android:layout_height="0dp"/>
 
             <Button
+                android:id="@+id/signUp_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:background="@drawable/roundbutton"
                 android:text="Signup"
                 android:textAllCaps="false"
+                android:background="@drawable/roundbutton"
                 android:textSize="20dp"
-                android:padding="10dp"
+                android:padding="5dp"
+                android:textColor="#333333"
                 android:fontFamily="@font/psb"/>
 
 
@@ -86,3 +97,4 @@
 
     </LinearLayout>
     </LinearLayout>
+</LinearLayout>
