--- a/app/src/main/res/layout/dialog_forgot.xml
+++ b/app/src/main/res/layout/dialog_forgot.xml
@@ -1,88 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="20dp"
-    android:padding="20dp"
-    android:id="@+id/dialogForgot"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/dialogForgot"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/dialogBox"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/gray">
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <TextView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/forgotTitle"
-            android:text="Forgot Password"
-            android:padding="10dp"
-            android:textSize="17sp"
-            android:textColor="@color/white"
-            android:drawablePadding="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/dialogBox"
+            android:backgroundTint="@color/gray"
+            app:cardCornerRadius="10dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/desc"
-            android:text="Enter your email address:"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="8dp"
-            android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
-            app:layout_constraintBottom_toTopOf="@id/emailBox"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <EditText
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/emailBox"
-            android:textSize="16sp"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="30dp"
-            android:maxLines="1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/forgotTitle"/>
+                <TextView
+                    android:id="@+id/forgotTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="8dp"
+                    android:padding="20dp"
+                    android:text="Forgot Password"
+                    android:textColor="@color/black"
+                    android:textSize="17sp" />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:id="@+id/btnCancel"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="10dp"
-            android:text="Cancel"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            app:cornerRadius = "20dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/emailBox"
-            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
-            app:layout_constraintEnd_toStartOf="@id/btnReset"/>
+                <TextView
+                    android:id="@+id/desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="Enter your email address:"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:id="@+id/btnReset"
-            android:text="Reset"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="40dp"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            app:cornerRadius = "20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
-            app:layout_constraintStart_toEndOf="@id/btnCancel"/>
+                <EditText
+                    android:id="@+id/emailBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_margin="20dp"
+                    android:background="@drawable/edittext_bg"
+                    android:maxLines="1"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                    <Button
+                        android:id="@+id/btnCancel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="Cancel"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        app:cornerRadius="20dp" />
+
+                    <Space
+                        android:layout_width="40dp"
+                        android:layout_height="match_parent" />
+
+                    <Button
+                        android:id="@+id/btnReset"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="Reset"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        app:cornerRadius="20dp" />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+</LinearLayout>
