--- a/app/src/main/res/layout/activity_continue.xml
+++ b/app/src/main/res/layout/activity_continue.xml
@@ -82,7 +82,7 @@
                 android:layout_height="0dp"/>
 
             <Button
-                android:id="@+id/signUp_btn"
+                android:id="@+id/signupBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
