--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -11,11 +11,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+
         <ImageView
             android:id="@+id/imgCart"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/guci" />
+            android:src="@drawable/guta" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,6 +38,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="gucii ko gutta"
+                android:textColor="@color/black"
+                android:fontFamily="@font/psb"
                 android:textSize="18sp"
                 android:ellipsize="end"
                 android:maxLines="1"/>
@@ -62,6 +65,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/psb"
                     android:textColor="@color/green"
                     android:text="$12334567"/>
 
