--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/product"
     android:layout_margin="10dp"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,72 +17,89 @@
             android:id="@+id/imgCart"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="10dp"
             android:src="@drawable/guta" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:weightSum="2"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+
+            android:orientation="horizontal"
+         >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:padding="10dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-            <TextView
-                android:id="@+id/cart_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="gucii ko gutta"
-                android:textColor="@color/black"
-                android:fontFamily="@font/psb"
-                android:textSize="18sp"
-                android:ellipsize="end"
-                android:maxLines="1"/>
+                android:layout_weight="0.3"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:padding="14dp">
+
+                <TextView
+                    android:id="@+id/cart_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/psb"
+                    android:maxLines="1"
+                    android:layout_margin="5dp"
+                    android:text="AIR FORCE x GUCCI"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
 
 
                 <TextView
                     android:id="@+id/cart_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginBottom="5dp"
                     android:fontFamily="@font/psb"
+                    android:text="$ 1999.00"
                     android:textColor="@color/green"
-                    android:text="$12334567"/>
+                    android:textSize="16sp" />
 
 
-        </LinearLayout>
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="10dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_margin="10dp"
+                android:padding="10dp">
 
                 <ImageButton
                     android:id="@+id/plusBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_add"/>
+                    android:layout_margin="2dp"
+                    android:background="@drawable/round_backgnd"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_add" />
 
                 <TextView
                     android:id="@+id/quantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1"/>
+                    android:fontFamily="@font/pb"
+                    android:text="1"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="11dp" />
 
                 <ImageButton
                     android:id="@+id/minusBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_minus"/>
+                    android:background="@drawable/round_backgnd"
+                    android:padding="5dp"
+                    android:layout_margin="2dp"
+                    android:src="@drawable/ic_minus" />
 
             </LinearLayout>
         </LinearLayout>
